# cyber-qin

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_TW.html  README_TW.md  RELEASE.txt  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.0_CN.md  coverage.json  coverage.txt  cyber_qin.spec  launcher.py  pyproject.toml  results.txt  test_output.txt  verify_syntax.py
.claude/design-system/: MASTER.md
.github/workflows/: ci.yml  release.yml
cyber_qin/: __init__.py  __main__.py  main.py
cyber_qin/core/: abc_parser.py  audio_exporter.py  auto_tune.py  automation.py  beat_sequence.py  config.py  constants.py  key_mapper.py  key_simulator.py  library_metadata.py  lilypond_parser.py  mapping_schemes.py  melody_generator.py  midi_file_player.py  midi_fx.py  midi_listener.py  midi_output_player.py  midi_preprocessor.py  midi_recorder.py  midi_writer.py  musicxml_parser.py  notation_renderer.py  note_sequence.py  (+5 more)
docs/: EDITOR_SDD.md  GITHUB_RELEASE_MULTILANG.md  GITHUB_RELEASE_v1.0.0.md  INSTALL_TW.md  ONBOARDING.md  RELEASE_NOTES_v1.0.0_TW.md  RELEASE_v1.0.0.txt  RELEASE_v2.0.0.md  config_system.md  practice-song-picker-SDD.md  practice-song-picker-TDD.md  sdd.md  v0.9.4_WORK_SUMMARY.md
releases/: v0.9.2_notes.md  v0.9.3_notes.md  v0.9.4_RELEASE_NOTES.md
reports/: config_implementation.md  config_integration.md  optimization_summary.md
scripts/: benchmark_note_roll.py  build.py  check_i18n.py  generate_icon.py  install.ps1  verify_syntax.py
tests/: conftest.py  test_auto_tune.py  test_automation.py  test_beat_sequence.py  test_beat_sequence_gaps.py  test_config.py  test_coverage_gaps.py  test_editor_ux.py  test_ff14_mapping.py  test_format_parsers.py  test_frontend_components.py  test_gui_integration.py  test_key_mapper.py  test_key_simulator.py  test_library_metadata.py  test_mapping_schemes.py  test_melody_generator.py  test_midi_file_player.py  test_midi_file_player_qt.py  test_midi_fx.py  test_midi_listener.py  test_midi_preprocessor.py  test_midi_recorder.py  test_midi_writer.py  test_notation_renderer.py  test_note_sequence.py  test_practice_engine.py  test_practice_view.py  test_priority.py  test_project_file.py  test_smart_arrangement.py  test_window_state.py
(+34 files in other folders)
