[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyber-qin"
version = "0.1.0"
description = "MIDI-to-Keyboard mapper for 燕雲十六聲 36-key mode"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "PyQt6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8",
]

[project.scripts]
cyber-qin = "cyber_qin.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cyber_qin/core/key_simulator.py" = ["N801"]  # ctypes inner union naming
"cyber_qin/gui/theme.py" = ["N806"]           # Win32 constant naming
