[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyber-qin"
version = "2.0.0"
description = "MIDI-to-Keyboard mapper for 燕雲十六聲 36-key mode"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "PyQt6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "pytest-qt>=4.2",
    "ruff>=0.8",
    "pyinstaller>=6.0",
    "pillow>=10.0",
    "mypy>=1.6",
]

[project.scripts]
cyber-qin = "cyber_qin.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = ["*.spec"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cyber_qin/core/key_simulator.py" = ["N801"]  # ctypes inner union naming
"cyber_qin/gui/theme.py" = ["N806"]           # Win32 constant naming

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_unimported = false # Too noisy with PyQt
disallow_untyped_defs = false   # Gradual adoption
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "mido.*",
    "rtmidi.*",
    "PIL.*",
    "win32con.*",
    "win32api.*",
]
ignore_missing_imports = true
